@@ -1,3 +1,4 @@
+2025-03-03 (ff8afbc): test for macos build
 2025-03-03 (3cf168f): test for macos arm64 build
 2025-03-03 (2395866): test for macos arm64 build
 2025-03-03 (121858a): i18n update
